fixed filter tags overflow

--- a/src/components/FiltersBar/FiltersBar.scss
+++ b/src/components/FiltersBar/FiltersBar.scss
@@ -724,7 +724,7 @@ font-family: 'Baloo', cursive;
 }
 
 
-@media (min-width: 800px) and (max-width: 1415px) {
+@media (min-width: 800px)  {
   .discovery-section .filters-bar .SubgenreFiltersDropDown {
       .tag {
       font-size: 14px !important;
