--- a/src/components/SongGrid/SongGridSquare.scss
+++ b/src/components/SongGrid/SongGridSquare.scss
@@ -1,7 +1,7 @@
 .imageHover {
-    border: 2px solid #fff;
-    border-top: 4px solid #fff;
-    border-bottom: 4px solid #fff;
+    border: 0px solid #fff;
+    border-top: 0px solid #fff;
+    border-bottom: 0px solid #fff;
 }
 
 .imageHover .tagWrapper {
