--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -1063,7 +1063,8 @@ a.spotifyLink {
 
             .tag {
                 margin: 0 2px;
-                padding: 6px 6px !important;
+                // padding: 6px 6px !important;
+                padding: 2px 2px !important;
                 border-radius: 2px;
                 transition: all .3s ease;
                 font-size: 12px;
